--- a/lang/strings_english.txt
+++ b/lang/strings_english.txt
@@ -526,7 +526,10 @@ $s_bugnote_add_resolve_button = 'Add Note';
 # bug_reminder_page.php
 $s_from = 'From';
 $s_to = 'To';
-$s_sent_you_this_reminder_about = 'sent you this reminder about';
+$s_mentioned_you_on_issue = ' mentioned you on #issue';
+$s_mentioned_you_on = 'mentioned you on';
+$s_Re = 'Re : ';
+$s_add_comment = 'add comment';
 $s_bug_reminder = 'Send a reminder';
 $s_reminder_sent_to = 'Reminder sent to';
 $s_reminder_sent_none = 'No reminders could be sent';
